hswm-bindings/include/river-window-management-v1-client-protocol.h


struct river_decoration_v1;
struct river_node_v1;
struct river_output_v1;
struct river_pointer_binding_v1;
struct river_seat_v1;
struct river_shell_surface_v1;
struct river_window_manager_v1;
struct river_window_v1;
extern const struct wl_interface river_window_manager_v1_interface;
extern const struct wl_interface river_window_v1_interface;
extern const struct wl_interface river_decoration_v1_interface;
extern const struct wl_interface river_shell_surface_v1_interface;
extern const struct wl_interface river_node_v1_interface;
extern const struct wl_interface river_output_v1_interface;
extern const struct wl_interface river_seat_v1_interface;
extern const struct wl_interface river_pointer_binding_v1_interface;
enum river_window_manager_v1_error {
	RIVER_WINDOW_MANAGER_V1_ERROR_SEQUENCE_ORDER = 0,
	RIVER_WINDOW_MANAGER_V1_ERROR_ROLE = 1,
	RIVER_WINDOW_MANAGER_V1_ERROR_UNRESPONSIVE = 2,
};
struct river_window_manager_v1_listener {
	void (*unavailable)(void *data,
			    struct river_window_manager_v1 *river_window_manager_v1);
	void (*finished)(void *data,
			 struct river_window_manager_v1 *river_window_manager_v1);
	void (*manage_start)(void *data,
			     struct river_window_manager_v1 *river_window_manager_v1);
	void (*render_start)(void *data,
			     struct river_window_manager_v1 *river_window_manager_v1);
	void (*session_locked)(void *data,
			       struct river_window_manager_v1 *river_window_manager_v1);
	void (*session_unlocked)(void *data,
				 struct river_window_manager_v1 *river_window_manager_v1);
	void (*window)(void *data,
		       struct river_window_manager_v1 *river_window_manager_v1,
		       struct river_window_v1 *id);
	void (*output)(void *data,
		       struct river_window_manager_v1 *river_window_manager_v1,
		       struct river_output_v1 *id);
	void (*seat)(void *data,
		     struct river_window_manager_v1 *river_window_manager_v1,
		     struct river_seat_v1 *id);
};
static inline int
river_window_manager_v1_add_listener(struct river_window_manager_v1 *river_window_manager_v1,
				     const struct river_window_manager_v1_listener *listener, void *data)
{
	return wl_proxy_add_listener((struct wl_proxy *) river_window_manager_v1,
				     (void (**)(void)) listener, data);
}
#define RIVER_WINDOW_MANAGER_V1_STOP 0
#define RIVER_WINDOW_MANAGER_V1_DESTROY 1
#define RIVER_WINDOW_MANAGER_V1_MANAGE_FINISH 2
#define RIVER_WINDOW_MANAGER_V1_MANAGE_DIRTY 3
#define RIVER_WINDOW_MANAGER_V1_RENDER_FINISH 4
#define RIVER_WINDOW_MANAGER_V1_GET_SHELL_SURFACE 5
#define RIVER_WINDOW_MANAGER_V1_EXIT_SESSION 6
static inline void
river_window_manager_v1_set_user_data(struct river_window_manager_v1 *river_window_manager_v1, void *user_data)
{
	wl_proxy_set_user_data((struct wl_proxy *) river_window_manager_v1, user_data);
}
static inline void *
river_window_manager_v1_get_user_data(struct river_window_manager_v1 *river_window_manager_v1)
{
	return wl_proxy_get_user_data((struct wl_proxy *) river_window_manager_v1);
}
static inline uint32_t
river_window_manager_v1_get_version(struct river_window_manager_v1 *river_window_manager_v1)
{
	return wl_proxy_get_version((struct wl_proxy *) river_window_manager_v1);
}
enum river_window_v1_error {
	RIVER_WINDOW_V1_ERROR_NODE_EXISTS = 0,
	RIVER_WINDOW_V1_ERROR_INVALID_DIMENSIONS = 1,
	RIVER_WINDOW_V1_ERROR_INVALID_BORDER = 2,
	RIVER_WINDOW_V1_ERROR_INVALID_CLIP_BOX = 3,
};
enum river_window_v1_decoration_hint {
	RIVER_WINDOW_V1_DECORATION_HINT_ONLY_SUPPORTS_CSD = 0,
	RIVER_WINDOW_V1_DECORATION_HINT_PREFERS_CSD = 1,
	RIVER_WINDOW_V1_DECORATION_HINT_PREFERS_SSD = 2,
	RIVER_WINDOW_V1_DECORATION_HINT_NO_PREFERENCE = 3,
};
enum river_window_v1_edges {
	RIVER_WINDOW_V1_EDGES_NONE = 0,
	RIVER_WINDOW_V1_EDGES_TOP = 1,
	RIVER_WINDOW_V1_EDGES_BOTTOM = 2,
	RIVER_WINDOW_V1_EDGES_LEFT = 4,
	RIVER_WINDOW_V1_EDGES_RIGHT = 8,
};
enum river_window_v1_capabilities {
	RIVER_WINDOW_V1_CAPABILITIES_WINDOW_MENU = 1,
	RIVER_WINDOW_V1_CAPABILITIES_MAXIMIZE = 2,
	RIVER_WINDOW_V1_CAPABILITIES_FULLSCREEN = 4,
	RIVER_WINDOW_V1_CAPABILITIES_MINIMIZE = 8,
};
struct river_window_v1_listener {
	void (*closed)(void *data,
		       struct river_window_v1 *river_window_v1);
	void (*dimensions_hint)(void *data,
				struct river_window_v1 *river_window_v1,
				int32_t min_width,
				int32_t min_height,
				int32_t max_width,
				int32_t max_height);
	void (*dimensions)(void *data,
			   struct river_window_v1 *river_window_v1,
			   int32_t width,
			   int32_t height);
	void (*app_id)(void *data,
		       struct river_window_v1 *river_window_v1,
		       const char *app_id);
	void (*title)(void *data,
		      struct river_window_v1 *river_window_v1,
		      const char *title);
	void (*parent)(void *data,
		       struct river_window_v1 *river_window_v1,
		       struct river_window_v1 *parent);
	void (*decoration_hint)(void *data,
				struct river_window_v1 *river_window_v1,
				uint32_t hint);
	void (*pointer_move_requested)(void *data,
				       struct river_window_v1 *river_window_v1,
				       struct river_seat_v1 *seat);
	void (*pointer_resize_requested)(void *data,
					 struct river_window_v1 *river_window_v1,
					 struct river_seat_v1 *seat,
					 uint32_t edges);
	void (*show_window_menu_requested)(void *data,
					   struct river_window_v1 *river_window_v1,
					   int32_t x,
					   int32_t y);
	void (*maximize_requested)(void *data,
				   struct river_window_v1 *river_window_v1);
	void (*unmaximize_requested)(void *data,
				     struct river_window_v1 *river_window_v1);
	void (*fullscreen_requested)(void *data,
				     struct river_window_v1 *river_window_v1,
				     struct river_output_v1 *output);
	void (*exit_fullscreen_requested)(void *data,
					  struct river_window_v1 *river_window_v1);
	void (*minimize_requested)(void *data,
				   struct river_window_v1 *river_window_v1);
	void (*unreliable_pid)(void *data,
			       struct river_window_v1 *river_window_v1,
			       int32_t unreliable_pid);
	void (*presentation_hint)(void *data,
				  struct river_window_v1 *river_window_v1,
				  uint32_t hint);
	void (*identifier)(void *data,
			   struct river_window_v1 *river_window_v1,
			   const char *identifier);
};