src/RiverWM/Bindings.chs

{-# LANGUAGE RecordWildCards #-}
module RiverWM.Bindings where

import Control.Monad

-- import C2HS
import Foreign hiding (void)
import Foreign.C
import Data.Default
import GHC.Generics (Generic)
import Control.Exception
import Text.Printf

{#import Wayland.Bindings #}

#include "river-window-management-v1-client-protocol.h"

type Data = Ptr ()

data RiverWindowManagerException = RiverWindowManagerException String deriving (Show)
instance Exception RiverWindowManagerException

foreign import ccall "&river_window_manager_v1_interface" river_window_manager_v1_interface :: WlInterface
foreign import ccall "&river_window_v1_interface" river_window_v1_interface :: WlInterface
foreign import ccall "&river_decoration_v1_interface" river_decoration_v1_interface :: WlInterface
foreign import ccall "&river_shell_surface_v1_interface" river_shell_surface_v1_interface :: WlInterface
foreign import ccall "&river_node_v1_interface" river_node_v1_interface :: WlInterface
foreign import ccall "&river_output_v1_interface" river_output_v1_interface :: WlInterface
foreign import ccall "&river_seat_v1_interface" river_seat_v1_interface :: WlInterface
foreign import ccall "&river_pointer_binding_v1_interface" river_pointer_binding_v1_interface :: WlInterface

{#pointer *river_decoration_v1 as RiverDecoration newtype#}
{#pointer *river_node_v1 as RiverNode newtype#}
{#pointer *river_output_v1 as RiverOutput newtype#}
{#pointer *river_pointer_binding_v1 as RiverPointerBinding newtype#}
{#pointer *river_seat_v1 as RiverSeat newtype#}
{#pointer *river_shell_surface_v1 as RiverShellSurface newtype#}
{#pointer *river_window_manager_v1 as RiverWindowManager newtype#}
{#pointer *river_window_v1 as RiverWindow newtype#}

instance Eq RiverOutput where RiverOutput a == RiverOutput b = a == b
instance Eq RiverSeat where RiverSeat a == RiverSeat b = a == b
instance Eq RiverWindow where RiverWindow a == RiverWindow b = a == b

instance IsWlProxy RiverWindowManager where toWlProxy (RiverWindowManager p) = WlProxy (castPtr p)
instance IsWlProxy RiverDecoration where toWlProxy (RiverDecoration p) = WlProxy (castPtr p)
instance IsWlProxy RiverWindow where toWlProxy (RiverWindow p) = WlProxy (castPtr p)
instance IsWlProxy RiverOutput where toWlProxy (RiverOutput p) = WlProxy (castPtr p)
instance IsWlProxy RiverSeat where toWlProxy (RiverSeat p) = WlProxy (castPtr p)
instance IsWlProxy RiverNode where toWlProxy (RiverNode p) = WlProxy (castPtr p)

instance IsRegistryObject RiverWindowManager where peekRegistryObject p = return $ RiverWindowManager $ castPtr p

instance WlMarshal RiverOutput where wlMarshal (RiverOutput p) = castPtr p
instance WlMarshal RiverSeat where wlMarshal (RiverSeat p) = castPtr p
instance WlMarshal RiverWindow where wlMarshal (RiverWindow p) = castPtr p
instance WlMarshal RiverNode where wlMarshal (RiverNode p) = castPtr p

-- * IFACE river_window_manager_v1

{#enum river_window_manager_v1_error as RiverWindowManagerError {underscoreToCase} #}

river_window_manager_v1_get_version :: RiverWindowManager -> IO Version
river_window_manager_v1_get_version wm = wl_proxy_get_version wm

river_window_manager_v1_set_user_data :: RiverWindowManager -> Data -> IO ()
river_window_manager_v1_set_user_data wm udata = wl_proxy_set_user_data wm udata

river_window_manager_v1_get_user_data :: RiverWindowManager -> IO Data
river_window_manager_v1_get_user_data wm = wl_proxy_get_user_data wm

-- ** Requests

wmStop :: RiverWindowManager -> IO ()
wmStop wm = do
  river_window_manager_v1_request_ wm {#const RIVER_WINDOW_MANAGER_V1_STOP#} 0

wmDestroy :: RiverWindowManager -> IO ()
wmDestroy wm = do
  river_window_manager_v1_request_ wm {#const RIVER_WINDOW_MANAGER_V1_DESTROY#} _WL_MARSHAL_FLAG_DESTROY

wmManageFinish :: RiverWindowManager -> IO ()
wmManageFinish wm = do
  ver <- wl_proxy_get_version wm
  void $ wl_proxy_marshal_flags wm {#const RIVER_WINDOW_MANAGER_V1_MANAGE_FINISH#} emptyInterface ver 0

wmManageDirty :: RiverWindowManager -> IO ()
wmManageDirty wm = do
  river_window_manager_v1_request_ wm {#const RIVER_WINDOW_MANAGER_V1_MANAGE_DIRTY#} 0

wmRenderFinish :: RiverWindowManager -> IO ()
wmRenderFinish wm = do
  ver <- wl_proxy_get_version wm
  void $ wl_proxy_marshal_flags wm {#const RIVER_WINDOW_MANAGER_V1_RENDER_FINISH#} emptyInterface ver 0

wmGetShellSurface :: RiverWindowManager -> WlSurface -> IO RiverShellSurface
wmGetShellSurface wm surface = do
  ver <- wl_proxy_get_version wm
  wl_proxy_marshal_flags__pp wm {#const RIVER_WINDOW_MANAGER_V1_GET_SHELL_SURFACE#} river_shell_surface_v1_interface ver 0 nullPtr surface
    >>= coerceWlProxy "wmGetShellSurface" (return . RiverShellSurface)

wmExitSession :: RiverWindowManager -> IO ()
wmExitSession wm = river_window_manager_v1_request_ wm {#const RIVER_WINDOW_MANAGER_V1_EXIT_SESSION#} 0

river_window_manager_v1_request_ :: RiverWindowManager -> CUInt -> Flags -> IO ()
river_window_manager_v1_request_ wm req flags = do
  ver <- wl_proxy_get_version wm
  wl_proxy_marshal_flags wm req emptyInterface ver flags >>= coerceWlProxy_ ("river_window_manager_v1_request_:" ++ show req)

type ListenerCb = Ptr () -> RiverWindowManager -> IO ()
type ListenerWindowCb = Ptr () -> RiverWindowManager -> RiverWindow -> IO ()
type ListenerOutputCb = Ptr () -> RiverWindowManager -> RiverOutput -> IO ()
type ListenerSeatCb = Ptr () -> RiverWindowManager -> RiverSeat -> IO ()

foreign import ccall "wrapper" wrapListenerCb :: ListenerCb -> IO (FunPtr ListenerCb)
foreign import ccall "wrapper" wrapListenerWindowCb :: ListenerWindowCb -> IO (FunPtr ListenerWindowCb)
foreign import ccall "wrapper" wrapListenerSeatCb :: ListenerSeatCb -> IO (FunPtr ListenerSeatCb)
foreign import ccall "wrapper" wrapListenerOutputCb :: ListenerOutputCb -> IO (FunPtr ListenerOutputCb)

data WindowManagerEvent
  = WindowManagerUnavailable      { e_data :: Data, e_wm :: RiverWindowManager }
  | WindowManagerFinished         { e_data :: Data, e_wm :: RiverWindowManager }
  | WindowManagerManageStart      { e_data :: Data, e_wm :: RiverWindowManager }
  | WindowManagerRenderStart      { e_data :: Data, e_wm :: RiverWindowManager }
  | WindowManagerSessionLocked    { e_data :: Data, e_wm :: RiverWindowManager }
  | WindowManagerSessionUnlocked  { e_data :: Data, e_wm :: RiverWindowManager }
  | WindowManagerWindow           { e_data :: Data, e_wm :: RiverWindowManager, e_window :: RiverWindow }
  | WindowManagerOutput           { e_data :: Data, e_wm :: RiverWindowManager, e_output :: RiverOutput }
  | WindowManagerSeat             { e_data :: Data, e_wm :: RiverWindowManager, e_seat :: RiverSeat }

_debugManagerEvent :: WindowManagerEvent -> String
_debugManagerEvent e = case e of
  WindowManagerUnavailable      {} -> "WindowManagerUnavailable    "
  WindowManagerFinished         {} -> "WindowManagerFinished       "
  WindowManagerManageStart      {} -> "WindowManagerManageStart    "
  WindowManagerRenderStart      {} -> "WindowManagerRenderStart    "
  WindowManagerSessionLocked    {} -> "WindowManagerSessionLocked  "
  WindowManagerSessionUnlocked  {} -> "WindowManagerSessionUnlocked"
  WindowManagerWindow           {} -> "WindowManagerWindow"
  WindowManagerOutput           {} -> "WindowManagerOutput"
  WindowManagerSeat             {} -> "WindowManagerSeat"

{#pointer *river_window_manager_v1_listener as RiverWindowManagerListener newtype#}

mkWindowManagerListener :: (WindowManagerEvent -> IO ()) -> IO RiverWindowManagerListener
mkWindowManagerListener h = do
    p <- RiverWindowManagerListener <$> mallocBytes {#sizeof river_window_manager_v1_listener#}
    {#set river_window_manager_v1_listener.unavailable#} p      =<< (wrapListenerCb $ \dt wm -> h $ WindowManagerUnavailable dt wm)
    {#set river_window_manager_v1_listener.finished#} p         =<< (wrapListenerCb $ \dt wm -> h $ WindowManagerFinished dt wm)
    {#set river_window_manager_v1_listener.manage_start#} p     =<< (wrapListenerCb $ \dt wm -> h $ WindowManagerManageStart dt wm)
    {#set river_window_manager_v1_listener.render_start#} p     =<< (wrapListenerCb $ \dt wm -> h $ WindowManagerRenderStart dt wm)
    {#set river_window_manager_v1_listener.session_locked#} p   =<< (wrapListenerCb $ \dt wm -> h $ WindowManagerSessionLocked dt wm)
    {#set river_window_manager_v1_listener.session_unlocked#} p =<< (wrapListenerCb $ \dt wm -> h $ WindowManagerSessionUnlocked dt wm)
    {#set river_window_manager_v1_listener.window#} p           =<< (wrapListenerWindowCb $ \dt wm a -> h $ WindowManagerWindow dt wm a)
    {#set river_window_manager_v1_listener.output#} p           =<< (wrapListenerOutputCb $ \dt wm a -> h $ WindowManagerOutput dt wm a)
    {#set river_window_manager_v1_listener.seat#} p             =<< (wrapListenerSeatCb $ \dt wm a -> h $ WindowManagerSeat dt wm a)
    return p

river_window_manager_v1_add_listener :: RiverWindowManager -> RiverWindowManagerListener -> Ptr () -> IO ()
river_window_manager_v1_add_listener wm (RiverWindowManagerListener l) dt = do
  res <- wl_proxy_add_listener wm (castPtr l) dt
  when (res < 0) $ throwIO $ RiverWindowManagerException "river_window_manager_v1_add_listener"

-- * IFACE river_window_v1

type WindowCaps = {#type uint32_t#}

type ClipBox = (Int, Int, Int, Int)

data WindowBorders = WindowBorders
  { wb_edges, wb_r, wb_g, wb_b, wb_a :: CUInt
  , wb_width :: Int
  } deriving (Eq, Ord, Show)

{#enum river_window_v1_error as RiverWindowError {underscoreToCase} #}
{#enum river_window_v1_decoration_hint as RiverWindowDecorationHint {underscoreToCase} #}
{#enum river_window_v1_edges as RiverWindowEdges {underscoreToCase} #}
{#enum river_window_v1_capabilities as RiverWindowCapabilities {underscoreToCase} #}
{#pointer *river_window_v1_listener as WindowListener newtype#}

invalidWindow :: RiverWindow
invalidWindow = RiverWindow $ castPtr $ nullPtr

invalidSeat :: RiverSeat
invalidSeat = RiverSeat $ castPtr $ nullPtr

data WindowEvent
  = WindowClosed { we_data :: Data, we_window :: RiverWindow }
  | WindowDimensionsHint { we_data :: Data, we_window :: RiverWindow, we_min_width, we_min_height, we_max_width, we_max_height :: CInt }
  | WindowDimensions { we_data :: Data, we_window :: RiverWindow, we_width, we_height :: CInt }
  | WindowAppId { we_data :: Data, we_window :: RiverWindow, we_app_id :: String }
  | WindowTitle { we_data :: Data, we_window :: RiverWindow, we_title :: String }
  | WindowParent { we_data :: Data, we_window :: RiverWindow, we_parent :: RiverWindow }
  | WindowDecorationHint { we_data :: Data, we_window :: RiverWindow, we_hint :: CUInt }
  | WindowPointerMoveRequested { we_data :: Data, we_window :: RiverWindow, we_seat :: RiverSeat }
  | WindowPointerResizeRequested { we_data :: Data, we_window :: RiverWindow, we_seat :: RiverSeat, we_edges :: CUInt }
  | WindowShowWindowMenuRequested { we_data :: Data, we_window :: RiverWindow, we_x, we_y :: CInt }
  | WindowMaximizeRequested { we_data :: Data, we_window :: RiverWindow }
  | WindowUnmaximizeRequested { we_data :: Data, we_window :: RiverWindow }
  | WindowFullscreenRequested { we_data :: Data, we_window :: RiverWindow, we_output :: RiverOutput }
  | WindowExitFullscreenRequested { we_data :: Data, we_window :: RiverWindow }
  | WindowMinimizeRequested { we_data :: Data, we_window :: RiverWindow }
  | WindowUnreliablePID { we_data :: Data, we_window :: RiverWindow, we_unreliable_pid :: CInt }
  | WindowPresentationHint { we_data :: Data, we_window :: RiverWindow, we_hint :: CUInt }
  | WindowIdentifier { we_data :: Data, we_window :: RiverWindow, we_identifier :: String }
